# rusty_pi_cam

./: .gitignore  Cargo.toml  README.md
examples/: v4l.rs
src/: main.rs
